some test cases and checkstyle resolved